--- a/client/src/app/components/alumnos-list/alumnos-list.component.html
+++ b/client/src/app/components/alumnos-list/alumnos-list.component.html
@@ -21,17 +21,23 @@
             <ul class="dropdown">
               <li><a routerLink="/usuarios-list">Users</a></li>
               <li><a routerLink="/admins-list">Administradores</a></li>
+              <li><a routerLink="/usuarios-list">Users</a></li>
+              <li><a routerLink="/admins-list">Administradores</a></li>
             </ul>
           </li>
           
           <li><a routerLink="/maestros-list">Maestros</a></li>
-          <li class="has-dropdown"><a routerLink="">Horarios</a>
+          <li><a routerLink="/grupos">Grupos</a></li>
+          <li><a routerLink="/clases">Clases</a></li>
+          <li class="has-dropdown"><a>Horarios</a>
             <ul class="dropdown">
               <li><a routerLink="/horario-form">Agregar Horario</a></li>
               <li><a routerLink="/horario">Ver Horarios</a></li>
             </ul>
           </li>
           <li><a routerLink="/calificaciones-list">Calificaciones</a></li>
+          <li><a routerLink="/calificaciones-list">Grabaciones</a></li>
+          <li><a routerLink="/calificaciones-list">Materiales</a></li>
         </ul>
       </div>
     </nav>
@@ -68,25 +74,26 @@
               </tr>
             </thead>
             <tbody>
-              <tr class="bg-gray-100 border-b" *ngFor="let alumno of arrayAlumnos[0]">
-                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">{{ alumno.first_name_A }}</td>
+              <tr class="bg-gray-100 border-b" *ngFor="let alumno of arrayAlumnos[0]|filter:filterPost">
+                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">{{ alumno.first_nameU }}</td>
                 <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
                   
-                {{ alumno.last_name_A }}
+                {{ alumno.last_nameU }}
                 </td>
                 <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
-                  {{ alumno.last_name2_A }}
+                  {{ alumno.last_nameU2 }}
                 </td>
                 <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
-                  {{ alumno.telephone_A }}
+                  {{ alumno.telephoneU }}
                 </td>
                 <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
-                  {{ alumno.email_A}}
+                  {{ alumno.email}}
                 </td>
 
                 <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
                   <!-- component -->
                   <button
+                  [routerLink]="['/usuario/update',alumno.id_user]"
                   data-ripple-light="true"
                   data-popover-target="popover"
                   class="middle none center rounded-lg bg-gradient-to-tr from-blue-600 to-blue-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
@@ -98,7 +105,7 @@
                 <td class="text-sm text-gray-900 font-light px-4 py-4 whitespace-nowrap">
                   <button
                   data-ripple-light="true"
-                  (click)="deleteAlumno(alumno.id_alumno)"
+                  (click)="deleteAlumno(alumno.id_user)"
                   data-popover-target="popover"
                   class="middle none center rounded-lg bg-gradient-to-tr from-red-600 to-red-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
                   >
