--- a/client/src/app/components/calificaciones-list/calificaciones-list.component.html
+++ b/client/src/app/components/calificaciones-list/calificaciones-list.component.html
@@ -21,17 +21,23 @@
             <ul class="dropdown">
               <li><a routerLink="/usuarios-list">Users</a></li>
               <li><a routerLink="/admins-list">Administradores</a></li>
+              <li><a routerLink="/usuarios-list">Users</a></li>
+              <li><a routerLink="/admins-list">Administradores</a></li>
             </ul>
           </li>
           
           <li><a routerLink="/maestros-list">Maestros</a></li>
-          <li class="has-dropdown"><a routerLink="">Horarios</a>
+          <li><a routerLink="/grupos">Grupos</a></li>
+          <li><a routerLink="/clases">Clases</a></li>
+          <li class="has-dropdown"><a>Horarios</a>
             <ul class="dropdown">
               <li><a routerLink="/horario-form">Agregar Horario</a></li>
               <li><a routerLink="/horario">Ver Horarios</a></li>
             </ul>
           </li>
           <li><a routerLink="/calificaciones-list">Calificaciones</a></li>
+          <li><a routerLink="/calificaciones-list">Grabaciones</a></li>
+          <li><a routerLink="/calificaciones-list">Materiales</a></li>
         </ul>
       </div>
     </nav>
@@ -40,6 +46,50 @@
   type="text" style="height: 35px; width: 800px; margin-left: 20%;" name="search" placeholder="Search" [(ngModel)]="filterPost"
   class="block w-full px-4 py1 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
 />
+
+<!-- This example requires Tailwind CSS v2.0+ -->
+<ul role="list" class="grid grid-cols-1 gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
+  <li class="col-span-1 flex flex-col text-center bg-white rounded-lg shadow divide-y divide-gray-200" *ngFor="let clase of arrayClases[0]">
+    <div class="flex-1 flex flex-col p-8">
+      <img class="w-32 h-32 flex-shrink-0 mx-auto rounded-full" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=4&w=256&h=256&q=60" alt="">
+      <h3 class="mt-6 text-gray-900 text-sm font-medium">{{clase.nombre_grupo}}</h3>
+      <dl class="mt-1 flex-grow flex flex-col justify-between">
+        <dt class="sr-only">Title</dt>
+        <dd class="text-gray-500 text-sm">{{clase.dia}} <br>{{clase.Hora_inicio}} -- {{clase.Hora_final}}</dd>
+        <dt class="sr-only">Role</dt>
+        <dd class="mt-3">
+          <span class="px-2 py-1 text-green-800 text-xs font-medium bg-green-100 rounded-full">Admin</span>
+        </dd>
+      </dl>
+    </div>
+    <div>
+      <div class="-mt-px flex divide-x divide-gray-200">
+        <div class="w-0 flex-1 flex">
+          <a routerLink="/calificacion-form" class="relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm text-gray-700 font-medium border border-transparent rounded-bl-lg hover:text-gray-500">
+            <!-- Heroicon name: solid/mail -->
+            
+            <span class="ml-3">Assign grade</span>
+          </a>
+        </div>
+        <div class="-ml-px w-0 flex-1 flex">
+          <a  class="relative w-0 flex-1 inline-flex items-center justify-center py-4 text-sm text-gray-700 font-medium border border-transparent rounded-br-lg hover:text-gray-500">
+            <!-- Heroicon name: solid/phone -->
+           
+            <span class="ml-3">View Grades</span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </li>
+
+
+
+  <!-- More people... -->
+  
+</ul>
+
+
+<!-- 
   <div class="flex flex-col">
     <div class="overflow-x-auto sm:mx-0.5 lg:mx-0.5">
       <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
@@ -80,7 +130,7 @@
                  
                 </td>
                 <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
-                  <!-- component -->
+                  
                   <button
                   [routerLink]="['/calificacion',alumno.id_alumno]"
                   data-ripple-light="true"
@@ -90,7 +140,7 @@
                   GRAFICA
                   </button>
                 </td>
-                <!--
+                
                 <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
                   
                   <button
@@ -113,7 +163,7 @@
                   </button>
                 </td>
               </tr>
-              -->
+             
    
               
               
@@ -125,6 +175,8 @@
       </div>
     </div>
   </div>
+  -->
+
 </body>
 </html>
 <!--
