--- a/client/src/app/components/calificaciones-form/calificaciones-form.component.html
+++ b/client/src/app/components/calificaciones-form/calificaciones-form.component.html
@@ -92,7 +92,7 @@
                   </th>
                 </tr>
               </thead>
-              <tr class="bg-gray-100 border-b" *ngFor="let alumno of arrayAlumnos[0]">
+              <tr class="bg-gray-100 border-b" *ngFor="let alumno of arrayAlumnos[0];let i = index">
                 <td  class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">{{ alumno.first_nameU }}</td>
                 <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
                   
@@ -103,9 +103,9 @@
                 </td>
 
                 <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
-                  <input type="text"
-                  [(ngModel)]="calificacion.calificacion"
-                  placeholder="Ingresar Calificacion">
+                  
+                <input #myElement type="text" placeholder="Grade" style="width:80px"> 
+                  
                 </td>
          
 
@@ -114,7 +114,7 @@
                   <button 
                   data-ripple-light="true"
                   data-popover-target="popover"
-                  (click)="saveCalificacion(alumno.id_user)"
+                  (click)="saveCalificacion(alumno.id_user,i)"
                   class="middle none center rounded-lg bg-gradient-to-tr from-blue-600 to-blue-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
                   >
                   AGREGAR
