--- a/client/src/app/components/calificaciones-list/calificaciones-list.component.html
+++ b/client/src/app/components/calificaciones-list/calificaciones-list.component.html
@@ -47,6 +47,9 @@
   class="block w-full px-4 py1 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
 />
 
+
+
+
 <!-- This example requires Tailwind CSS v2.0+ -->
 <ul role="list" class="grid grid-cols-1 gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
   <li class="col-span-1 flex flex-col text-center bg-white rounded-lg shadow divide-y divide-gray-200" *ngFor="let clase of arrayClases[0]">
@@ -65,7 +68,7 @@
     <div>
       <div class="-mt-px flex divide-x divide-gray-200">
         <div class="w-0 flex-1 flex">
-          <a routerLink="/calificacion-form" class="relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm text-gray-700 font-medium border border-transparent rounded-bl-lg hover:text-gray-500">
+          <a [routerLink]="['/calificaciones-form',clase.id_grupo]" class="relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm text-gray-700 font-medium border border-transparent rounded-bl-lg hover:text-gray-500">
             <!-- Heroicon name: solid/mail -->
             
             <span class="ml-3">Assign grade</span>
@@ -82,12 +85,84 @@
     </div>
   </li>
 
-
+  <input #miInput type="text" placeholder="Grade" style="width:80px">
 
   <!-- More people... -->
   
 </ul>
+<br>
+<div  *ngIf="click" style="margin-left: 30px; margin-top: 20px;">
+  <label
+    for="email"
+    class="block mb-2 text-sm text-gray-600 dark:text-gray-200"
+    >Fecha</label
+  >
+  
+  <input
+    type="date"
+    name="Hora_inicio"
+    id="email"
+    [(ngModel)]="calificacion.fecha_calif"
+    style="width: 150px"
+    placeholder="example@example.com"
+    class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
+  />
+</div>
+<h6 >Lista de Alumnos </h6>
+<div  class="flex flex-col">
+  <div class="overflow-x-auto sm:mx-0.5 lg:mx-0.5">
+    <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
+      <div class="overflow-hidden">
+        <table class="min-w-full">
+          <thead class="bg-white border-b">
+            <tr>
+              <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+                First Name
+              </th>
+              <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+                Last Name
+              </th>
+              <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+                Second Last Name
+              </th>
+              <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+                Grade
+              </th>
 
+
+            </tr>
+          </thead>
+          <tr class="bg-gray-100 border-b" *ngFor="let alumno of arrayAlumnos[0]">
+            <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
+              {{alumno.first_nameU}}
+            </td>
+            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
+              {{alumno.last_nameU}}
+            </td>
+            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
+              {{alumno.last_nameU2}}
+            </td>
+            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
+              <input #miInput type="text" placeholder="Grade" style="width:80px">
+            </td>
+            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
+              
+            <button (input)="onClickButton(alumno.id_user)"  data-ripple-light="true" data-popover-target="popover"
+            class="middle none center rounded-lg bg-gradient-to-tr from-blue-600 to-blue-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none">
+            AGREGAR
+          </button>
+            </td>
+
+
+
+
+          </tr>
+        </table>
+       
+      </div>
+    </div>
+  </div>
+</div>
 
 <!-- 
   <div class="flex flex-col">
@@ -179,6 +254,7 @@
 
 </body>
 </html>
+
 <!--
 <!DOCTYPE html>
 
