--- a/client/src/app/components/grupos/grupos.component.html
+++ b/client/src/app/components/grupos/grupos.component.html
@@ -58,6 +58,7 @@
               <dl class="mt-1 flex-grow flex flex-col justify-between">
                 <dt class="sr-only">Title</dt>
                 <dd class="text-gray-500 text-sm"></dd>
+                <dd class="text-gray-500 text-sm">{{grupos.categoria}}</dd>
                 <dt class="sr-only">Role</dt>
                 <dd class="mt-3">
                   <span class="px-2 py-1 text-green-800 text-xs font-medium bg-green-100 rounded-full">Admin</span>
