--- a/client/src/app/components/horarios-form/horarios-form.component.html
+++ b/client/src/app/components/horarios-form/horarios-form.component.html
@@ -66,7 +66,7 @@
           <select [(ngModel)]="horario.id_grupo" name="grupo" required>
             <option>Select Group</option>
             <option *ngFor="let clase of arrayClases[0]"   
-              value="{{ clase.id_grupo}}">{{ clase.nombre_grupo }}</option>
+              value="{{ clase.id_grupo}}">{{ clase.nombre_grupo }}---{{clase.categoria}}</option>
 
             
 
@@ -75,6 +75,7 @@
       </div>
     </div>
 </div>
+<!--
 <div class="field">
   <label for="email" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Day</label>
   <div class="control">
@@ -87,7 +88,7 @@
     </div>
   </div>
 </div>
-
+-->
 <div>
   <label for="email" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Start Time</label>
   <input type="time" name="Hora_inicio" id="email" [(ngModel)]="horario.Hora_inicio" style="width:150px" placeholder="example@example.com" class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
